# Raytracer

./: .gitignore  CMakeLists.txt  GL.cpp  GL.h  Vec3.h  conanfile.txt  main.cpp
Camera/: Camera.cpp  Camera.h
GL/: GL.cpp  GL.h
GL/FullScreenQuad/: FullScreenQuad.frag  FullScreenQuad.vert
Lights/: Light.cpp  Light.h
Math/: Vec2.h  Vec3.h  global.h
Primitives/: Box.h  MeshTriangle.h  Plane.cpp  Plane.h  Renderable.h  Sphere.cpp  Sphere.h
Renderer/: Raytracer.cpp  Raytracer.h
Scene/: Scene.cpp  Scene.h
Shaders/FullScreenQuad/: FullScreenQuad.frag  FullScreenQuad.vert
TaskManager/: TaskManager.cpp  TaskManager.h
